--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
-          java-version: 17
+          java-version: 11
 
       - name: Setup aapt and aapt2
         run: |
@@ -28,7 +28,7 @@ jobs:
       - uses: gradle/actions/setup-gradle@v4
       
       - name: Build +Android
-        run: ./gradlew build shadowJar
+        run: ./gradlew build shadowJar proguard
 
       - uses: actions/upload-artifact@v4
         with:
